include a default for rule configs

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -13,6 +13,7 @@ promfriends_cache_path: >-
 promfriends_sites: {}
 promfriends_certs_changed: false
 promfriends_logdriver: "json"  # or journald or whatever
+promfriends_rule_configs: []
 
 # Configuration for Prometheus itself
 prometheus_container_user: "docker"
